# multilingual-voice-synthesis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: multilingual_narration.py
src/: __init__.py
src/languages/: language_config.py
src/synthesis/: audio_processor.py  emotion_controller.py  tts_pipeline.py  voice_cloner.py
tests/: test_synthesis.py
